# MapDisplay3D

./: .gitignore  BORDER_ENHANCEMENT.md  CMakeLists.txt  DATA_MIGRATION.md  IMPROVEMENTS.md  INTERACTIVE_FEATURES.md  README.md  STATION_DATA.md  ZOOM_BUTTON_FIX.md  fullstations.json  india_boundary.geojson  india_boundary_detailed.geojson  mainwindow.cpp  mainwindow.h  map.html  mapwidget.cpp  mapwidget.h  run.sh  run_app.sh  run_clean.sh  sample.pro  stations.geojson  test_offline.html
webapp/: .gitignore  3D_COLOR_FIX.md  3D_MAP_FEATURE.md  ACTIONS_CONFIG.md  ASSET_RENDERING_GUIDE.md  CHAT_COMMANDS_GUIDE.md  CHAT_TRIP_FEATURE.md  CHECKLIST.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KEYBOARD_CONTROLS_GUIDE.md  KEYBOARD_ZOOM_CONTROLS_COMPLETE.md  QUICKSTART.md  README.md  SCENE_SYSTEM_GUIDE.md  STATION_ZOOM_FEATURE.md  TESTING_GUIDE.md  TRIP_FEATURE.md  ZOOM_DEBUG_GUIDE.md  ZOOM_FINAL_SOLUTION.md  ZOOM_FIX_FINAL.md  ZOOM_FIX_SUMMARY.md  ZOOM_IMPLEMENTATION.md  ZOOM_ITERATION_13.md  ZOOM_RANGE_UPDATE.md  ZOOM_ROOT_CAUSE.md  ZOOM_TO_CURSOR_FIX.md  restart_backend.sh  run_all.sh  setup.sh  test.sh  test_scenes.sh  test_zoom.sh
webapp/backend/: .gitignore  IMPLEMENTATION_COMPLETE.md  LLM_PROVIDER_GUIDE.md  MULTI_PROVIDER_README.md  QUICKSTART.sh  README.md  config.py  config.yaml  cors_config.py  llm_provider.py  main.py  requirements.txt  run.sh  setup.sh  test_llm_providers.sh  test_simple.sh
webapp/backend/data/: scenes.json  (+2 more)
webapp/frontend/: .gitignore  README.md  index.html  package.json  run.sh  setup.sh  tailwind.config.js  verify-zoom-fix.sh  vite.config.js
(+37 files in other folders)
